--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-pip install requests
-pip install asyncio
-pip install bs4
-pip install discord
-pip install time
-pip install datetime
-pip install firebase_admin
-pip install quickchart.io
-pip install nest_asyncio
-pip install table2ascii
+requests
+asyncio
+bs4
+discord
+datetime
+firebase_admin
+quickchart.io
+nest_asyncio
+table2ascii
